--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <header class="cbl-top-nav">
         <div class="cbl-top-nav-wrapper">
+
             <div class="cbl-search-wrapper">
                 <i class="la la-search"></i>
                 <input class="cbl-search-input" type="text" placeholder="Buscar en Contabilium" />
@@ -31,13 +32,13 @@
                 </div>
 
                 <ul class="cbl-top-icon-list">
-                    <li><button><i class="la la-wrench"></i></button></li>
-                    <li><button><i class="la la-bell"></i></button><span class="cbl-icon-badge">10</span></li>
-                    <li><button><i class="la la-comments-dollar"></i></button><span class="cbl-icon-badge">¡Ganá!</span>
+                    <li><button title="Herramientas"><i class="la la-wrench"></i></button></li>
+                    <li><button title="Notificaciones"><i class="la la-bell"></i></button><span class="cbl-icon-badge cbl-bg-danger">10</span></li>
+                    <li><button title="Plan de referidos"><i class="la la-comments-dollar"></i></button><span class="cbl-icon-badge cbl-bg-secondary">¡Ganá!</span>
                     </li>
                 </ul>
 
-                <button class="cbl-user-button">
+                <button title="Mi cuenta" class="cbl-user-button">
                     <div class="cbl-user-info">
                         <span>¡Hola, <b>Pedro</b>!</span>
                         <span class="cbl-caption">Plan Pro - #807</span>
