maquetación, styling y comportamiento básico de sidebar

--- a/index.html
+++ b/index.html
@@ -175,7 +175,224 @@
         </div>
     </header>
     <div class="cbl-menu-nav">
+        <div class="cbl-sidebar-wrapper">
+            <div class="cbl-sidebar-top-content">
+                <button class="cbl-logo-button-toggle">
+                    <div class="cbl-isologo-wrapper">
+                        <img src="img/logo_sidebar.svg" width="" alt="Contabilium">
+                    </div>
+                </button>
+                <ul class="cbl-sidebar-list">
+                    <li>
+                        <button data-toggle="tooltip" data-placement="right" title="DASHBOARD">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-dashboard"></i> <span class="cbl-menu-label">Dashboard</span>
+                            </div>
+                        </button>
+                    </li>
+                    <li class="dropdown">
+                        <button data-toggle="dropdown">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-receipt"></i> <span class="cbl-menu-label">Ventas</span>
+                            </div>
+                        </button>
+                        <div class="cbl-sidebar-dropdown dropdown-menu">
+                            <h6>Ventas</h6>
+                            <ul>
+                                <li><a href="#">Ventas por POS</a></li>
+                                <li><a href="#">Facturación</a></li>
+                                <li><a href="#">Integraciones (Ventas Online)</a></li>
+                                <li><a href="#">Cobranzas</a></li>
+                                <li><a href="#">Presupuestos</a></li>
+                                <li><a href="#">Abonos</a></li>
+                                <li><a href="#">Productos y Servicios</a></li>
+                                <li><a href="#">Clientes</a></li>
+                                <li><a href="#">Ordenes de venta</a></li>
+                                <li><a href="#">Remitos personalizados</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <button data-toggle="dropdown">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-tag"></i> <span class="cbl-menu-label">Compras</span>
+                            </div>
+                        </button>
+                        <div class="cbl-sidebar-dropdown dropdown-menu">
+                            <h6>Compras</h6>
+                            <ul>
+                                <li><a href="#">Ordenes de compra</a></li>
+                                <li><a href="#">Comprobantes</a></li>
+                                <li><a href="#">Pagos</a></li>
+                                <li><a href="#">Proveedores</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <button data-toggle="dropdown">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-university"></i> <span class="cbl-menu-label">Tesorería</span>
+                            </div>
+                        </button>
+                        <div class="cbl-sidebar-dropdown dropdown-menu">
+                            <h6>Tesorería</h6>
+                            <ul>
+                                <li><a href="#">Entidades</a></li>
+                                <li><a href="#">Cajas</a></li>
+                                <li><a href="#">Cheques</a></li>
+                                <li><a href="#">Movimientos bancarios</a></li>
+                                <li><a href="#">Movimientos de fondos</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <button data-toggle="dropdown">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-box"></i> <span class="cbl-menu-label">Inventarios</span>
+                            </div>
+                        </button>
+                        <div class="cbl-sidebar-dropdown dropdown-menu">
+                            <h6>Inventarios</h6>
+                            <ul>
+                                <li><a href="#">Depósitos</a></li>
+                                <li><a href="#">Modificación de stock</a></li>
+                                <li><a href="#">Movimientos entre depósitos</a></li>
+                                <li><a href="#">Importación masiva de productos</a></li>
+                                <li><a href="#">Actualización masiva de stock</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <button data-toggle="dropdown">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-book-open"></i> <span class="cbl-menu-label">Contabilidad</span>
+                            </div>
+                        </button>
+                        <div class="cbl-sidebar-dropdown dropdown-menu">
+                            <h6>Contabilidad</h6>
+                            <ul>
+                                <li><a href="#">Plan de cuentas</a></li>
+                                <li><a href="#">Libro diario</a></li>
+                                <li><a href="#">Libro diario copiativo</a></li>
+                                <li><a href="#">Libro mayor</a></li>
+                                <li><a href="#">Balance general</a></li>
+                                <li><a href="#">Asientos manuales</a></li>
+                                <li><a href="#">Estado de resultado</a></li>
+                                <li><a href="#">Modificar cuentas masivamente</a></li>
+                                <li><a href="#">Reprocesar asientos</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <button data-toggle="dropdown">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-chart-bar"></i> <span class="cbl-menu-label">Reportes</span>
+                            </div>
+                        </button>
+                        <div class="cbl-sidebar-dropdown dropdown-menu"
+                            style="min-width: 1024px; top: inherit; bottom: 100%; margin-bottom: -236px;">
+                            <h6>Reportes</h6>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="cbl-dropdown-subcategory">Financieros y Económicos</h6>
+                                    <ul>
+                                        <li><a href="#">Comparativo</a></li>
+                                        <li><a href="#">Egresos por CC</a></li>
+                                        <li><a href="#">Egresos mensuales por CC</a></li>
+                                        <li><a href="#">Ingresos vs Egresos por CC</a></li>
+                                        <li><a href="#">Liquidez anual</a></li>
+                                        <li><a href="#">Saldos de liquidez</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-sm-3">
+                                    <h6 class="cbl-dropdown-subcategory">Impositivos</h6>
+                                    <ul>
+                                        <li><a href="#">IVA Ventas</a></li>
+                                        <li><a href="#">IVA Compras</a></li>
+                                        <li><a href="#">Posición IVA</a></li>
+                                        <li><a href="#">Retenciones</a></li>
+                                        <li><a href="#">Percepciones</a></li>
+                                        <li><a href="#">Libro IVA Digital / CITI</a></li>
+                                        <li><a href="#">Agentes de recaudación</a></li>
+                                        <li><a href="#">CM - Sifere Web</a></li>
+                                        <li><a href="#">Ventas por destino</a></li>
+                                        <li><a href="#">Compras por destino</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-sm-3">
+                                    <h6 class="cbl-dropdown-subcategory">Productos</h6>
+                                    <ul>
+                                        <li><a href="#">Stock</a></li>
+                                        <li><a href="#">Stock mínimo</a></li>
+                                        <li><a href="#">Rentabilidad de productos</a></li>
+                                        <li><a href="#">Rentabilidad por venta</a></li>
+                                        <li><a href="#">Entradas y salidas</a></li>
+                                        <li><a href="#">Detalle de reservas</a></li>
+                                        <li><a href="#">Ranking</a></li>
+                                        <li><a href="#">Historial de compras</a></li>
+                                        <li><a href="#">Ventas por cliente</a></li>
+                                        <li><a href="#">Stock de despacho</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-sm-3">
+                                    <h6 class="cbl-dropdown-subcategory">Gestión</h6>
+                                    <ul>
+                                        <li><a href="#">Cuenta Corriente</a></li>
+                                        <li><a href="#">Saldos de clientes</a></li>
+                                        <li><a href="#">Cobranzas pendientes</a></li>
+                                        <li><a href="#">Saldos de proveedores</a></li>
+                                        <li><a href="#">Cuentas a pagar</a></li>
+                                        <li><a href="#">Pagos a proveedores</a></li>
+                                        <li><a href="#">Ranking de clientes</a></li>
+                                        <li><a href="#">Ventas por integración</a></li>
+                                        <li><a href="#">Ventas por punto de venta</a></li>
+                                        <li><a href="#">Ventas por condición de venta</a></li>
+                                        <li><a href="#">Compras por cliente</a></li>
+                                        <li><a href="#">Tracking horas</a></li>
+                                        <li><a href="#">Comisiones por vendedor</a></li>
+                                        <li><a href="#">Ventas mensuales</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
+            <div class="cbl-sidebar-bottom-content">
+                <ul class="cbl-sidebar-list cbl-secondary-list">
+                    <li>
+                        <button data-toggle="tooltip" data-placement="right" title="Tipo de cambio">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-exchange"></i> <span class="cbl-menu-label">Tipo de cambio</span>
+                            </div>
+                        </button>
+                    </li>
+                    <li>
+                        <button data-toggle="tooltip" data-placement="right" title="Potenciá tu plan">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-shopping-bag"></i> <span class="cbl-menu-label">Potenciá tu plan</span>
+                            </div>
+                        </button>
+                    </li>
+                    <li>
+                        <button data-toggle="tooltip" data-placement="right" title="Funcionalidades">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-laptop-code"></i> <span class="cbl-menu-label">Funcionalidades</span>
+                            </div>
+                        </button>
+                    </li>
+                    <li>
+                        <button data-toggle="tooltip" data-placement="right" title="Centro de ayuda">
+                            <div class="cbl-icon-wrapper">
+                                <i class="la la-question-circle"></i> <span class="cbl-menu-label">Centro de
+                                    ayuda</span>
+                            </div>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div class="cbl-usermenu-mobile">
@@ -226,7 +443,12 @@
 
     <div class="cbl-content-wrapper">
 
-
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
 
 
     </div>
@@ -241,6 +463,10 @@
 <script src="js/select2.min.js"></script>
 
 <script>
+
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
 
     // Select2 Initialization
     $(document).ready(function () {
@@ -274,7 +500,7 @@
         }
     })
 
-    $(".button-sidebar-toggle").click(function () {
+    $(".button-sidebar-toggle, .cbl-logo-button-toggle").click(function () {
         $("body").toggleClass("sidebar-open").removeClass("usermenu-open");
         $(this).children("i").toggleClass("la-bars la-times");
         e.stopPropagation()
