se agregaron flechitas al button toggle del menu lateral y al button de usuario; se hizo un fix sobre el focus del buscador; se ajustaron algunos estilos; se incluyó una imagen del dashboard para simular contenido

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="cbl-search-wrapper">
                 <i class="la la-search"></i>
-                <input class="cbl-search-input" maxlength="100" id="search" type="text"
+                <input aria-hidden="true" class="cbl-search-input" maxlength="100" id="search" type="text"
                     placeholder="Buscar en Contabilium" />
             </div>
 
@@ -156,6 +156,7 @@
                             <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200"
                                 alt="Mi Cuenta" width="100%" />
                         </div>
+                        <span class="cbl-arrow-circle"><i class="la la-angle-down"></i></span>
                     </button>
                     <div class="dropdown-menu cbl-dropdown" onclick="event.stopPropagation()">
                         <div class="dropdown-menu-wrapper" data-ref="main" style="width: 100%; min-width: 100%">
@@ -193,6 +194,7 @@
                         <div class="cbl-isologo-wrapper">
                             <img src="img/logo_sidebar.svg" width="" alt="Contabilium">
                         </div>
+                        <span class="cbl-arrow-circle"><i class="la la-angle-right"></i></span>
                     </button>
 
                     <ul class="cbl-sidebar-list">
@@ -920,12 +922,7 @@
     <!-- content wrapper -->
     <div class="cbl-content-wrapper">
 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.
+        <img src="img/dashboard_capture.png" width="100%">
 
 
     </div>
